--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "node ./backend/app.js",
 		"seeder": "node backend/seeder/seeder.js",
 		"dev": "cross-env NODE_ENV=DEVELOPMENT nodemon backend/app.js",
-		"prod": "cross-env NODE_ENV=PRODUCTION node backend/app.js"
+		"prod": "cross-env NODE_ENV=PRODUCTION node backend/app.js",
+		"build": "cd ./frontend build"
 	},
 	"author": "Animesh Jha",
 	"license": "ISC",
