--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.456.0",
 		"mongoose": "^8.5.3",
 		"nodemailer": "^6.9.14",
 		"stripe": "^17.2.1"
