--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@reduxjs/toolkit": "^2.2.7",
 		"chart.js": "^4.4.5",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"ip-info-react": "^1.0.0",
+		"lucide-react": "^0.456.0",
 		"mdbreact": "^5.2.0",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.2.0",
@@ -29,7 +34,10 @@
 		"react-star-ratings": "^2.3.0",
 		"sass": "^1.77.8",
 		"slick-carousel": "^1.8.1",
-		"tailwind-scrollbar": "^3.1.0"
+		"tailwind-merge": "^2.5.4",
+		"tailwind-scrollbar": "^3.1.0",
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
