--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@reduxjs/toolkit": "^2.2.7",
 		"chart.js": "^4.4.5",
