--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"ip-info-react": "^1.0.0",
 		"lucide-react": "^0.456.0",
 		"mdbreact": "^5.2.0",
+		"motion": "^11.11.17",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.2.0",
 		"react-datepicker": "^7.5.0",
